# Aurelinx

./: .gitignore  README.md  package.json
.github/workflows/: desktop-release.yml
Docs/: vps_deployment_guide.md
Docs/AdminWork/: AdminID.md  admin_id_gate_guide.md
Docs/Planned_Architecture/: FuturePlan.md  aurelinx_enterprise_competitive_implementation_plan.md  aurelinx_enterprise_readiness_addendum.md  aurelinx_landing_page_blueprint.md  aurelinx_target_market_and_gtm_strategy.md  enterprise_hr_intelligence_master_plan.md
Docs/Worked/: aurelinx_end_to_end_checklist.md  aurelinx_implementation_record.md  aurelinx_landing_page_remaining_todo.md  aurelinx_master_backlog.md  aurelinx_readiness_remaining_todo.md  aurelinx_status_report.md  changelog.md  enterprise_execution_program.md
client/: README.md  package-lock.json
client/app/: layout.jsx
client/src/: App.jsx  index.css
client/src/components/: ApprovalModal.jsx  AurelinxLogo.jsx  AureliusLogo.jsx  AuthScreen.jsx  LandingPage.jsx  (+8 more)
desktop/: package-lock.json  package.json
desktop/scripts/: prepare-config.js
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
infra/: .env.production.example  Caddyfile  README.md  create-admin.sh  docker-compose.prod.yml  manage-codes.sh  setup-env.sh
server/: .env.example  mypy.ini  requirements.txt  setup_db.py
server/app/: main.py
server/scripts/: import_hr_csv.py
server/tests/: test_integration_endtoend.py  test_integration_idempotency.py
(+19 files in other folders)
